--- a/ui/src/app/core/components/formulario-persona/formulario-persona.component.html
+++ b/ui/src/app/core/components/formulario-persona/formulario-persona.component.html
@@ -1,4 +1,4 @@
-<app-form
-    entity="Persona">
-
-</app-form>
+<generic-form
+    [service]="this.service"
+    entity="Persona" id="form">
+</generic-form>
