--- a/ui/src/app/core/components/persona-dialog/persona-dialog/persona-dialog.component.html
+++ b/ui/src/app/core/components/persona-dialog/persona-dialog/persona-dialog.component.html
@@ -5,7 +5,7 @@
     <mat-card-content>
         <div>
             <h1>Pruebas Formulario</h1>    
-            <app-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></app-form>
+            <generic-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></generic-form>
           </div>
     </mat-card-content>
 </mat-card>
