--- a/ui/src/app/core/components/formulario-persona/formulario-persona.component.html
+++ b/ui/src/app/core/components/formulario-persona/formulario-persona.component.html
@@ -1,4 +1,6 @@
 <generic-form
     [service]="this.service"
-    entity="Persona" id="form">
+    entity="Persona" 
+    class="generic-form-comp"
+    [ngClass]="{'generic-form-comp-smallDevice': isSmallDevice}">
 </generic-form>
