--- a/ui/src/app/core/components/tabla-Persona/tabla.component.html
+++ b/ui/src/app/core/components/tabla-Persona/tabla.component.html
@@ -5,3 +5,4 @@
   [editable]="editable"
   [entidad]="entidad"
 ></app-table>
+<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
