--- a/ui/src/app/shared/components/sidenav/sidenav.component.html
+++ b/ui/src/app/shared/components/sidenav/sidenav.component.html
@@ -13,7 +13,7 @@
   
     <mat-sidenav-container class="example-sidenav-container"
                            [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-      <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+      <mat-sidenav #snav opened [mode]="mobileQuery.matches ? 'over' : 'side'"
                    [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
         <mat-nav-list appAccordion class="menu-vertical">
             <mat-list-item appAccordionLink *ngFor="let menuitem of fillerNav" routerLinkActive="selected">
@@ -28,7 +28,7 @@
       </mat-sidenav>
   
       <mat-sidenav-content>
-        <app-component-viewer></app-component-viewer>
+        <app-component-viewer entity="Persona"></app-component-viewer>
       </mat-sidenav-content>
     </mat-sidenav-container>
   </div>
