--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,10 +1,3 @@
-<!-- <div>
-  <h1>Pruebas Formulario</h1>    
-  <app-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></app-form>
-</div>  
-<app-tabla></app-tabla> 
-<app-sidenav></app-sidenav>
-</div>   
-<app-tabla></app-tabla>
-
-<persona-form></persona-form> -->
+<div> 
+  <app-sidenav></app-sidenav>
+</div>
