--- a/ui/src/app/core/persona/components/personas/personas.component.html
+++ b/ui/src/app/core/persona/components/personas/personas.component.html
@@ -1,1 +1,1 @@
-<app-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></app-form>
+<generic-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></generic-form>
