--- a/ui/src/app/shared/components/component-viewer/component-viewer.component.css
+++ b/ui/src/app/shared/components/component-viewer/component-viewer.component.css
@@ -1,3 +1,35 @@
-.component-viewer{
-    padding: 2rem 3rem;
+:host mat-toolbar {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    align-items: center;
+}
+
+:host .toolbar-btn-container {
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: row;
+    gap: .5rem;
+}
+:host .toolbar-title {
+    flex: 1 1 auto;
+}
+:host .toolbar-search-container {
+    flex: 1 1 auto;
+    background-color: white;
+    color: black;
+    font-size: 14px;
+    padding: 0 5px;
+}
+
+:host .component-viewer {
+    padding: .5rem 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+:host .component-viewer-smallDevice {
+    padding: 0;
 }
