--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -2,4 +2,6 @@
   <h1>Pruebas Formulario</h1>    
   <app-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></app-form>
 </div>-->   
-<app-tabla></app-tabla>
+<!-- <app-tabla></app-tabla> -->
+
+<app-sidenav></app-sidenav>
