comienzo integracion de menues...analisis

--- a/ui/src/app/shared/components/sidenav/sidenav.component.html
+++ b/ui/src/app/shared/components/sidenav/sidenav.component.html
@@ -28,7 +28,12 @@
       </mat-sidenav>
   
       <mat-sidenav-content>
+     
         <app-component-viewer entity="Persona"></app-component-viewer>
+        <!-- <ng-template *ngFor="let entidad of arrayEntities">
+          <app-component-viewer entity="entidad"></app-component-viewer>
+        </ng-template>
+         -->
       </mat-sidenav-content>
     </mat-sidenav-container>
   </div>
