ruteo por id desde table a form

--- a/ui/src/app/core/components/tabla-Persona/tabla.component.html
+++ b/ui/src/app/core/components/tabla-Persona/tabla.component.html
@@ -4,5 +4,6 @@
   [tablaHead]="tablaHead"
   [editable]="editable"
   [entidad]="entidad"
+  [path]="'personas'"
 ></app-table>
 <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
