--- a/ui/src/app/core/components/formulario-persona/formulario-persona.component.html
+++ b/ui/src/app/core/components/formulario-persona/formulario-persona.component.html
@@ -2,5 +2,6 @@
     [service]="this.service"
     entity="Persona" 
     class="generic-form-comp"
-    [ngClass]="{'generic-form-comp-smallDevice': isSmallDevice}">
+    [ngClass]="{'generic-form-comp-smallDevice': isSmallDevice}"
+    [presentacion]="this.getStyle('medium')">
 </generic-form>
