--- a/ui/src/app/shared/components/form/form.component.html
+++ b/ui/src/app/shared/components/form/form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+<form [formGroup]="formGroup" (ngSubmit)="onSubmit()" [ngStyle]="this.presentacion">
         <app-field 
             *ngFor="let field of fields" 
             [field]="field" 
