Cambios en route,agregado tipo boton en fieldcomponent, agregado subsidenav y renderizado dinamico

--- a/ui/src/app/shared/components/component-viewer/component-viewer.component.html
+++ b/ui/src/app/shared/components/component-viewer/component-viewer.component.html
@@ -5,9 +5,10 @@
         </div>
         <div class="toolbar-title">
             <span>{{entity}}</span>
+
         </div>
         <div class="toolbar-search-container">            
-            <span>Search Bar: not implemented yet</span>
+            <span>...</span>
         </div>
       </mat-toolbar>
 
