--- a/ui/src/app/shared/components/sidenav/sidenav.component.html
+++ b/ui/src/app/shared/components/sidenav/sidenav.component.html
@@ -7,8 +7,8 @@
 <mat-list-item appAccordionLink *ngFor="let menuitem of fillerNav" routerLinkActive="selected">
   <a class="" appAccordionToggle [routerLink]="['/', menuitem.state]" *ngIf="menuitem.type === 'link'">
     <div class="mainMenu-component">
-      <mat-icon class="mainMenu-component-icon">{{menuitem.icon}}</mat-icon> 
-      <span class="mainMenu-component-span">{{menuitem.name}}</span>     
+      <mat-icon class="mainMenu-component-icon" (click)="modifySidenav(menuitem)" >{{menuitem.icon}}</mat-icon> 
+      <span   class="mainMenu-component-span" (click)="modifySidenav(menuitem)">{{menuitem.name}}</span>     
     </div>
       
       <span fxFlex></span>
@@ -17,10 +17,10 @@
 </mat-list-item>
 
 
-      <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+      <button mat-icon-button class="example-icon favorite-icon"  aria-label="Example icon-button with heart icon">
         <mat-icon>account_circle</mat-icon>
       </button>
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <button mat-icon-button class="example-icon"   aria-label="Example icon-button with share icon">
         <mat-icon>settings</mat-icon>
       </button>
     </mat-toolbar>   
@@ -30,26 +30,45 @@
       <mat-sidenav #snav opened [mode]="mobileQuery.matches ? 'over' : 'side'"
                    [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
         <mat-nav-list appAccordion class="menu-vertical">
-          <div *ngFor="let menuitem of fillerNav">
-          <ng-template *ngIf="menuitem.name == 'Persona';then trueBlock"></ng-template>
-          <ng-template #trueBlock>
-            <div *ngFor="let option of menuitem.options">
-              <h3>{{option.value}}</h3>
-            </div>          
-          </ng-template>
-         
-          
-          
-         </div>
-          
-        
+          <!-- <div *ngFor="let menuitem of fillerNav"> -->
+              <!-- <ng-container *ngIf=" fillerNav.length > 0 ;then trueCase ;else falseCase"></ng-container>
+                <ng-template #trueCase>
+                    <h4>caso true</h4>
+                </ng-template>
+                <ng-template #falseCase>
+                    <h4>caso false</h4>
+                </ng-template> -->
+                <app-sub-sidenav [menu]="menu"></app-sub-sidenav>
+              <!-- <ng-container [ngSwitch]="menuitem.name">
+                  <ng-container *ngSwitchCase="variableMenu" >
+                    <h3>opciones Persona</h3>
+                  </ng-container>
+                  <ng-container *ngSwitchCase="variableMenu" >
+                    <h3>opciones Domicilio</h3>
+                    
+                  </ng-container>
+                  <ng-container *ngSwitchDefault> Opcion no valida 
+                  </ng-container> 
+              </ng-container> -->
+                
+          <!-- <ng-template *ngIf="menuitem.name ='{{variableMenu}}';then trueBlock;else falseBlock"></ng-template> -->
+          <!-- <ng-template #trueBlock> -->
+          <!-- <div *ngFor="let option of menuitem.options"> -->
+          <!-- <h3>{{option.value}}</h3> -->
+          <!-- </div>     -->
+                  
+          <!-- </ng-template>     -->
+          <!-- <ng-template #falseBlock>
+            <h3>'No hay menu definido'</h3>
+          </ng-template>                          -->
+         <!-- </ng-container>         -->
         </mat-nav-list>
        
       </mat-sidenav>
   
       <mat-sidenav-content>
      
-        <app-component-viewer entity="Persona"></app-component-viewer>
+        <app-component-viewer entity="{{variableMenu}}"></app-component-viewer>
         <!-- <ng-template *ngFor="let entidad of arrayEntities">
           <app-component-viewer entity="entidad"></app-component-viewer>
         </ng-template>
