Tabla Permisos(editMal)

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,11 +1,9 @@
-<div>
+<!--<div>
   <h1>Pruebas Formulario</h1>    
-<<<<<<< HEAD
   <app-form-permisos [entity]="'Persona'" [fields]="fieldPermisos$ | async" id="app"></app-form-permisos>
-</div> --> 
+</div>-->
+
 <app-tabla-permisos></app-tabla-permisos>
-=======
-  <app-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></app-form>
-</div>   
-<!-- <app-tabla></app-tabla> -->
->>>>>>> catalinito/formulario/stable
+  <!--<generic-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></generic-form>
+ 
+ <app-tabla></app-tabla> -->
