--- a/ui/src/app/shared/components/dialog/dialog/dialog.component.html
+++ b/ui/src/app/shared/components/dialog/dialog/dialog.component.html
@@ -8,7 +8,7 @@
     
     <mat-card-content>
       
-      <app-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></app-form>
+      <generic-form [entity]="'Persona'" [fields]="fields$ | async" id="app"></generic-form>
         
     </mat-card-content>
     
