--- a/ui/src/app/shared/components/component-viewer/component-viewer.component.html
+++ b/ui/src/app/shared/components/component-viewer/component-viewer.component.html
@@ -1,10 +1,13 @@
 <div class="component-viewer" [ngClass]="{'component-viewer-smallDevice': isSmallDevice}">
     <mat-toolbar color="primary">
-        <div class="toolbar-btn-container" *ngFor="let btn of this.buttons">
-            <a mat-flat-button *ngIf="btn.type === 'link'" color="accent" [routerLink]="['/', btn.state]">{{btn.name}}</a>
+        <!-- <div class="toolbar-btn-container" *ngFor="let btn of this.buttons"> -->
+                <div class="toolbar-btn-container" >
+                <a mat-flat-button  (click)="modifyEntity()" color="accent" [routerLink]="['/',entity+'new']">NUEVO</a>
+            <!-- <a mat-flat-button *ngIf="btn.type === 'link'" (click)="modifyEntity(btn)" color="accent" [routerLink]="['/', btn.state]">{{btn.name}}</a> -->
+            <!-- <a mat-flat-button *ngIf="btn.type === 'link'" color="accent" [routerLink]="['/', btn.state]">{{btn.name}}</a> -->
         </div>
         <div class="toolbar-title">
-            <span>{{entity}}</span>
+            <span>{{entity|uppercase}}</span>
 
         </div>
         <div class="toolbar-search-container">            
