--- a/ui/src/app/shared/components/component-viewer/component-viewer.component.html
+++ b/ui/src/app/shared/components/component-viewer/component-viewer.component.html
@@ -1,3 +1,4 @@
+<!-- <router-outlet></router-outlet> -->
 <div class="component-viewer" [ngClass]="{'component-viewer-smallDevice': isSmallDevice}">
     <mat-toolbar color="primary">
         <div class="toolbar-btn-container" *ngFor="let btn of this.buttons">
